Fix deprecated Jena calls and Eclipse pom errors
Update some Jena API calls since Jena bump from 3.17.0 to 4.1.0 causes
some compilation problems.  Fix by replacing RDFReader / RDFWriter
with RDFReaderI / RDFWriterI, NodeFactory.createAnon with
NodeFactory.createBlankNode, and LiteralLabelFactory.create with
LiteralLabelFactory.createTypedLiteral.  Also replace deprecated
FileManager calls with RDFDataMgr calls, deprecated Query.getQueryType
with Query.isUnknownType, deprecated Class.newInstance with
Class.getDeclaredConstructor.newInstance, deprecated new
Boolean/Double/Integer/Long with Boolean/Double/Integer/Long.valueOf,
etc.  Remove commented out and unused code from UtilsForJena and
ConfigurationManager.

Also fix remaining Eclipse pom errors by adding <?m2e ignore?> to
target-platform-configurator in parent pom and moving
com.ge.research.sadl dependency from plugin level to pom level in
com.ge.research.sadl.jena pom.  Don't need eclipse-plugin type in
com.ge.research.sadl dependency too.

However, running Jena 4.1.0 instead of 3.17.0 causes STEM's Run.sadl
to take more memory and more time.  Since Jena 4.1.0 slows down SADL's
performance running inference very noticeably (from a few seconds to
1-2 minutes), discard RDFReader / RDFWriter changes and roll Jena back
from 4.1.0 to 3.17.0 but keep rest of changes since they don't harm
SADL's performance emperically.